--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,25 +1,37 @@
-<h1>Hackathon Starter</h1>
-<p class="lead">A boilerplate for Node.js web applications.</p>
-<hr/>
-<div class="row">
-  <div class="col-sm-6">
-    <h2>Heading</h2>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-    <p><a href="#" role="button" class="btn btn-default">View details »</a></p>
-  </div>
-  <div class="col-sm-6">
-    <h2>Heading</h2>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-    <p><a href="#" role="button" class="btn btn-default">View details »</a></p>
-  </div>
-  <div class="col-sm-6">
-    <h2>Heading</h2>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-    <p><a href="#" role="button" class="btn btn-default">View details »</a></p>
-  </div>
-  <div class="col-sm-6">
-    <h2>Heading</h2>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-    <p><a href="#" role="button" class="btn btn-default">View details »</a></p>
-  </div>
+<!-- Header -->
+<a name="about"></a>
+<div class="intro-header">
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="intro-message">
+                    <h1>iReception</h1>
+                    <h3>Image/logo?</h3>
+                    <hr class="intro-divider">
+                    <ul class="list-inline intro-social-buttons">
+                        <li>
+                            <a href="Sign_in.html" class="btn btn-default btn-lg"> <span class="network-name">Sign In/Sign Up</span></a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!-- /.container -->
+
 </div>
+<!-- /.intro-header -->
+
+<!-- Page Content -->
+
+
+<!-- jQuery -->
+<script src="/public/js/lib/jquery-2.2.0.min.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="/public/js/lib/bootstrap.min.js"></script>
+
+</body>
