--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -12,15 +12,15 @@
   </head>
   <body>
 
-  	    <div class="navbar navbar-default navbar-fixed-top">
+  <div class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="/" class="navbar-brand"><i class="fa fa-cube"></i>Project name</a>
+      <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="/" class="navbar-brand"><i class="fa fa-cube"></i>Jackson 5</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
-        <li><a href="/api">API Examples</a></li>
+        <!--<li><a href="/api">API Examples</a></li>-->
         <li><a href="/contact">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -94,9 +94,18 @@
 {{/if}}
       {{{body}}}
     </div>
-    <script src="/js/lib/jquery-2.2.0.min.js"></script>
-    <script src="/js/lib/bootstrap.min.js"></script>
-    <script src="/js/main.js"></script>
+
+
+  <!-- Bootstrap Core CSS -->
+  <link href="/public/css/landing-page.css" rel="stylesheet">
+  <link href="/public/css/bootstrap.css" rel="stylesheet">
+  <link href="/public/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/public/css/main.css" rel="stylesheet">
+  <!-- Custom Fonts -->
+  <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <script src="/public/js/lib/jquery-2.2.0.min.js"></script>
+    <script src="/public/js/lib/bootstrap.min.js"></script>
+    <script src="/public/js/main.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID-->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
