premium/free option and info about features in landing page

--- a/views/Billing_info.handlebars
+++ b/views/Billing_info.handlebars
@@ -60,34 +60,29 @@
     </nav>
 
     <div class = "sign-in">
-        <h1>Sign up</h1>
-        <p>Don't have an account yet? Sign up for free!</p>
+        <h1>Billing Information</h1>
     </div>
 
     <div class="sign-up-forms">
         <form role="form">
             <div class="form-group">
-                <input type="companyname" class="form-control" placeholder="AdminID">
+                <input type="companyname" class="form-control" placeholder="Full Name">
             </div>
             <div class="form-group">
-                <input type="companyemail" class="form-control" placeholder="Company Name">
+                <input type="companyemail" class="form-control" placeholder="Card Number">
             </div>
              <div class="form-group">
-                <input type="companyemail" class="form-control" placeholder="Company Email">
+                <input type="companyemail" class="form-control" placeholder="Expiration Date">
             </div>
              <div class="form-group">
-                <input type="companyemail" class="form-control" placeholder="Company Phone Number">
-            </div>
-            <div class="form-group">
-                <input type="newpass" class="form-control" placeholder="New Password">
-            </div>
-            <div class="form-group">
-                <input type="reenterpass" class="form-control" placeholder="Re-Enter Password">
+                <input type="companyemail" class="form-control" placeholder="Security Number">
             </div>
 
-                <a href="Billing_info" class="btn btn-default btn-md"> <span class="network-name">Upgrade to Premium!</span></a>
+                <a href="Sign_in.html" class="btn btn-default btn-md"> <span class="network-name">Or Connect to Paypal</span></a>
 
-                 <a href="#" class="btn btn-default btn-md"> <span class="network-name">Sign Up</span></a>
+                <a href="Sign_in.html" class="btn btn-default btn-md"> <span class="network-name">Submit</span></a>
+
+
         </form>
     </div>  
     </div>
