--- a/views/Sign_in.handlebars
+++ b/views/Sign_in.handlebars
@@ -4,7 +4,7 @@
 <head>
 
     <title>Sign In</title>
-    <link rel="stylesheet" type="text/css" href="Sign_in.css"
+    <link rel="stylesheet" type="text/css" href="Sign_in.css">
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -68,8 +68,10 @@
             <div class="form-group">
                 <input type="text" class="form-control" placeholder="Password">
             </div>
+            <div>
                 <a href="Sign_in.html" class="btn btn-default btn-md"> <span class="network-name">Log In</span></a>
-            </div>  
+            </div> 
+        </form>
     </div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
