created sidebar layout, linked add_employees

--- a/views/landing_page.handlebars
+++ b/views/landing_page.handlebars
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>iReception</h1>
+                        <h1>iReceptionist</h1>
                         <h3>Image/logo?</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
