linked patient_queue and form

--- a/views/layouts/sidebar_layout.handlebars
+++ b/views/layouts/sidebar_layout.handlebars
@@ -42,10 +42,10 @@
                     <a href="#">Overview</a>
                 </li>
                 <li>
-                    <a href="#">Form Builder</a>
+                    <a href="/form">Form Builder</a>
                 </li>
                 <li>
-                    <a href="#">Patient Queue</a>
+                    <a href="/patientqueue">Patient Queue</a>
                 </li>
                 <li>
                     <a href="/addemployees">Add Employees</a>
