linked overview, form, patient queue, add employees succesffully

--- a/views/layouts/sidebar_layout.handlebars
+++ b/views/layouts/sidebar_layout.handlebars
@@ -39,7 +39,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">Overview</a>
+                    <a href="/overview">Overview</a>
                 </li>
                 <li>
                     <a href="/form">Form Builder</a>
@@ -51,7 +51,7 @@
                     <a href="/addemployees">Add Employees</a>
                 </li>
                 <li>
-                    <a href="#">Settings</a>
+                    <a href="/settings">Settings</a>
                 </li>
             </ul>
         </div>
