--- a/views/landing_page.handlebars
+++ b/views/landing_page.handlebars
@@ -79,10 +79,10 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a href="Sign_in.html" class="btn btn-default btn-lg"> <span class="network-name">Log In</span></a>
+                                <a href="/login" class="btn btn-default btn-lg"> <span class="network-name">Log In</span></a>
                             </li>
                             <li>
-                                <a href="Sign_up.html" class="btn btn-default btn-lg"> <span class="network-name">Sign Up</span></a>
+                                <a href="/signup" class="btn btn-default btn-lg"> <span class="network-name">Sign Up</span></a>
                             </li>
    
    
