--- a/views/add_employees.handlebars
+++ b/views/add_employees.handlebars
@@ -78,6 +78,13 @@
 									</th>
 								</tr>
 							</thead>
+                            {{#employees}}
+                            <tr>
+                                <td>{{name}}</td>
+                                <td>{{phone_number}}</td>
+                                <td>{{email}}</td>
+                            </tr>
+                            {{/employees}}
 							<tbody>
 							</tbody>
 						</table>
