--- a/views/Billing_info.handlebars
+++ b/views/Billing_info.handlebars
@@ -4,7 +4,7 @@
 <head>
 
     <title>Sign In</title>
-    <link rel="stylesheet" type="text/css" href="Sign_in.css"
+    <link rel="stylesheet" type="text/css" href="Sign_in.css">
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
