Added URL field for sign up

--- a/views/account/signup.handlebars
+++ b/views/account/signup.handlebars
@@ -46,12 +46,18 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-12">
-                            <input type="text" name="companyphone" id="companyphone" class="form-control" placeholder="Company Phone"/>
+                            <input type="tel" name="companyphone" id="companyphone" class="form-control" placeholder="Company Phone"/>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-md-6">
                             <button type="submit" class="btn btn-info btn-block">Sign Up</button>
+                        </div>
+                    </div>
+                    // subdomail url 
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <input type="url" name="subdomainurl" id="subdomainurl" class="form-control" placeholder="Subdomain URL"/>
                         </div>
                     </div>
                     </form>
