--- a/views/account/signup.handlebars
+++ b/views/account/signup.handlebars
@@ -31,7 +31,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-12">
-                            <input type="email" name="email" id="email" class="form-control" placeholder="E-mail"/>
+                            <input type="email" name="email" id="email" class="form-control" placeholder="Company E-mail"/>
                         </div>
                     </div>
                     <div class="form-group">
