--- a/views/account/login.handlebars
+++ b/views/account/login.handlebars
@@ -56,7 +56,7 @@
                 </div>
                 <div class="login-footer">
                     <div class="pull-left">
-                        &copy; 2014 AppName
+                        &copy; 2016 Receptional
                     </div>
                     <div class="pull-right">
                         <a href="/about">About</a> |
