--- a/views/account/login.handlebars
+++ b/views/account/login.handlebars
@@ -21,7 +21,7 @@
             <div class="login-box animated fadeInDown">
                 <div class="login-logo"></div>
                 <div class="login-body">
-                    <div class="login-title"><strong>Log In</strong> 
+                    <div class="login-title"><strong>Log In</strong></div>
                     <form class="form-horizontal" method="POST">
                     <div class="form-group">
                         <div class="col-md-12">
