--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -61,7 +61,8 @@
                         <li><a href="/logout">Log Out</a></li>
                     {{else}}
                         <li><a href="/signup">Sign Up</a></li>
-                        <li><a href="/login">Login</a></li>
+                        <li><a href="/login">Login As Owner</a></li>
+                        <li><a href="/loginemployee">Login As Employee</a></li>
                     {{/if}}
                 </ul>
                 <!-- ./navigation -->
